task: update swagger, validator form
