# internal/entity/config.go
@@ -1,5 +1,5 @@
 package entity
 
 type Config struct {
-	MaxCustomer int `json:"max_customer"`
+    MaxCustomer int `json:"max_customer" validate:"required,min=2"`
 }
